changed logo in all html head's

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -24,7 +24,7 @@
     <script type="text/javascript" src="/scriptDocs/advancePageOne.js" defer></script>
 
     <title>Preenchimento dados - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 
