--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -25,7 +25,7 @@
     <script type="text/javascript" src="\scriptDocs/carrinho.js" defer></script>
 
     <title>Carrinho - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 
