--- a/html/produtos.html
+++ b/html/produtos.html
@@ -26,7 +26,7 @@ no<!DOCTYPE html>
     
 
     <title>Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 
