--- a/html/verduras.html
+++ b/html/verduras.html
@@ -24,7 +24,7 @@
 
 
     <title>Verduras - Horta d'Ria - Produtos Biológicos - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 
