--- a/html/basketHistoric.html
+++ b/html/basketHistoric.html
@@ -22,7 +22,7 @@ se<!DOCTYPE html>
 
 
     <title>Todos os Cabazes - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 </head>
