--- a/html/informations.html
+++ b/html/informations.html
@@ -26,7 +26,7 @@
 
 
     <title>Informações - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 </head>
