--- a/html/orderSentPage.html
+++ b/html/orderSentPage.html
@@ -27,7 +27,7 @@
 
 
     <title>Obrigado! - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 </head>
