--- a/html/sabaoNatural.html
+++ b/html/sabaoNatural.html
@@ -24,7 +24,7 @@
 
 
     <title>Sabão Natural - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 
