--- a/html/saladas.html
+++ b/html/saladas.html
@@ -23,7 +23,7 @@
 
 
     <title>Saladas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 </head>
