--- a/html/testemunhos.html
+++ b/html/testemunhos.html
@@ -28,8 +28,7 @@
     
 
     <title>Testemunhos - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
-
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 </head>
