--- a/html/videos.html
+++ b/html/videos.html
@@ -29,7 +29,7 @@
     
 
     <title>Videos - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
-    <link rel="icon" type="image/png" href="/images/HR_logo.png">
+    <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
 
