remove input mercado on advancedPageOne.html

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -171,18 +171,18 @@
                     <!-- ========== LEVANTAR ========= -->
             <section class="pick-up-sec border-1">
                 <h5>
-                    Onde preferes levantar a tua encomenda?
+                    Levantar a encomenda em:
                 </h5>
                 <!-- <input type="hidden"  name="Local de Levantamento:"> -->
-                <div>
+                <!-- <div>
                     <input id="praca" type="radio" name="local" value="Mercado" checked>
                     <div class="mercado">
                         <label for="praca">Mercado de Famalicão</label>
                         <span>Sábado (7:00 - 13:00)</span>
                     </div>
-                </div>
+                </div> -->
                 <div>
-                    <input id="horta" type="radio" name="local" value="Horta d'Ria">
+                    <input id="horta" type="radio" name="local" value="Horta d'Ria" checked>
                     <label for="horta">Horta d'Ria</label>
                 </div>
                 
