fix errors on form of advancePageOne

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -142,9 +142,10 @@
                     <label for="deliver-day">Dia de Entrega<span class="required-input-icon">*</span></label>
                     <input id="deliver-day" type="date" name="Data Entrega" required>
                 </div>
+
                 <div class="schedule-deliver">
                     <label for="schedule">Horário<span class="required-input-icon">*</span></label>
-                    <select id="scheduleToDeliverAtHome" name="Horário" value="" required class="required" placeholder="Selecionar">
+                    <select id="scheduleToDeliverAtHome" name="Horario" value="" required class="required" placeholder="Selecionar">
                         <option value="">Selecionar</option>
                         <optgroup label="Manhã">
                             
@@ -166,6 +167,7 @@
                         <input type="text" name="Horário Disponivel" id="other-schedule">
                     </div>
                 </div>
+                
             </section>
 
                     <!-- ========== LEVANTAR ========= -->
