Update cabazes and add reserved rigths texteContent

--- a/html/basketHistoric.html
+++ b/html/basketHistoric.html
@@ -17,8 +17,9 @@ se<!DOCTYPE html>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script src="/scriptDocs/basketHistoric.js"></script>
-    <script type="text/javascript" src="/script.js" defer></script>
+    <script type="module" src="/scriptDocs/basketHistoric.js"></script>
+    <script type="module" src="\script.js" defer></script>
+
 
 
     <title>Todos os Cabazes - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
@@ -158,10 +159,13 @@ se<!DOCTYPE html>
 
        
         <div class="webDevSp">
-            <a href="https://portfoliosimaopedro.webdevsp.com/" target="_blank">
-                <p class="my-name"><span class="designBy">Developed by </span>simaoPedro</p>
+            <p class="reservedRigths my-name"></p>
+
+            <a href="https://portfoliosimaopedro.webdevsp.com/">
+                <p class="my-name"><span class="designBy">Created by Simão Pedro</p>
             </a>
         </div>
+        
     </section>
 
 </body>
