--- a/html/orderSentPage.html
+++ b/html/orderSentPage.html
@@ -21,7 +21,7 @@
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <script  type="text/javascript" src="/scriptDocs/orderSentPage.js" defer></script>
-    <script type="text/javascript" src="/script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
 
 
 
@@ -178,8 +178,10 @@
         </div>
        
         <div class="webDevSp">
-            <a href="https://portfoliosimaopedro.webdevsp.com/" target="_blank">
-                <p class="my-name"><span class="designBy">Developed by </span>simaoPedro</p>
+            <p class="reservedRigths my-name"></p>
+
+            <a href="https://portfoliosimaopedro.webdevsp.com/">
+                <p class="my-name"><span class="designBy">Created by Simão Pedro</p>
             </a>
         </div>
         
