--- a/html/saladas.html
+++ b/html/saladas.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
     <!-- <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/> -->
-    <script type="text/javascript" src="/scriptDocs/saladas.js" defer></script>
+    <script type="module" src="/scriptDocs/saladas.js" defer></script>
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script type="text/javascript" src="/script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
 
 
     <title>Saladas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
@@ -156,8 +156,10 @@
 
        
         <div class="webDevSp">
-            <a href="https://portfoliosimaopedro.webdevsp.com/" target="_blank">
-                <p class="my-name"><span class="designBy">Developed by </span>simaoPedro</p>
+            <p class="reservedRigths my-name"></p>
+
+            <a href="https://portfoliosimaopedro.webdevsp.com/">
+                <p class="my-name"><span class="designBy">Created by Simão Pedro</p>
             </a>
         </div>
         
