--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
     <script type="module" src="/script.js" defer></script>
+    <script type="module" src="/scriptDocs/termsAndConditions.js" defer></script>
+
+    <script type="module" src="/scriptDocs/termsAndConditions.js" defer></script>
+
     <script type="module" src="/scriptDocs/testimonials.js" defer></script>
 
 
@@ -78,8 +82,7 @@
             <input type="search" class="searchBarInput">
                 <i class="fa-solid fa-magnifying-glass"></i>
         </div>  -->
-
-
+        <!-- <div class="popUpTerms"></div> -->
         <!-- BOTTOM MENU BAR -->
         <section class="bottom-menu">
             <div class="home">
@@ -368,18 +371,22 @@
                 <a href="https://maps.app.goo.gl/ZR7CWSfpoNfkTDMD9" target="_blank"><p>Morada</p></a>
                 <a href="/html/aboutUs.html"><p>Sobre Nós</p></a>
                 <a href="#"><p>Voltar ao topo</p></a>
+                <!-- <p class="termsAndConditions">Termos e condições</p> -->
             </div>
     
            
             <div class="webDevSp">
+                <p class="reservedRigths my-name"></p>
+
                 <a href="https://portfoliosimaopedro.webdevsp.com/">
-                    <p class="my-name"><span class="designBy">Created by </span>Simão Pedro</p>
+                    <p class="my-name"><span class="designBy">Created by Simão Pedro</p>
                 </a>
             </div>
 
-            <!-- <div class="allRigthsReserved"></div> -->
 
         </section>
 
     </body>
 </html>
+
+
