--- a/html/success.html
+++ b/html/success.html
@@ -20,7 +20,7 @@
     <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <script type="text/javascript" src="/script.js" defer></script>
+    <script type="module" src="/script.js" defer></script>
 
 
 
@@ -175,11 +175,12 @@
 
        
         <div class="webDevSp">
-            <a href="https://portfoliosimaopedro.webdevsp.com/" target="_blank">
-                <p class="my-name"><span class="designBy">Developed by </span>simaoPedro</p>
+            <p class="reservedRigths my-name"></p>
+
+            <a href="https://portfoliosimaopedro.webdevsp.com/">
+                <p class="my-name"><span class="designBy">Created by Simão Pedro</p>
             </a>
         </div>
-        
     </section>
 
 </body>
