--- a/html/raizes.html
+++ b/html/raizes.html
@@ -152,14 +152,16 @@
             <a href="https://maps.app.goo.gl/ZR7CWSfpoNfkTDMD9" target="_blank"><p>Morada</p></a>
             <a href="/html/aboutUs.html"><p>Sobre Nós</p></a>
             <a href="#"><p>Voltar ao topo</p></a>
+            <a href="/html/informations.html#termsAndConditions"><p>Termos e Condições</p></a>
+
         </div>
 
        
         <div class="webDevSp">
-            <p class="reservedRigths my-name"></p>
+            <p class="reservedRigths"></p>
 
             <a href="https://portfoliosimaopedro.webdevsp.com/">
-                <p class="my-name"><span class="designBy">Created by Simão Pedro</p>
+                <p class="my-name"></p>
             </a>
         </div>
         
