--- a/html/verduras.html
+++ b/html/verduras.html
@@ -154,6 +154,8 @@
             <a href="https://maps.app.goo.gl/ZR7CWSfpoNfkTDMD9" target="_blank"><p>Morada</p></a>
             <a href="/html/aboutUs.html"><p>Sobre Nós</p></a>
             <a href="#"><p>Voltar ao topo</p></a>
+            <a href="/html/informations.html#termsAndConditions"><p>Termos e Condições</p></a>
+
         </div>
        
         <div class="webDevSp">
