added new items and update a few prices

--- a/html/produtos.html
+++ b/html/produtos.html
@@ -202,6 +202,13 @@ no<!DOCTYPE html>
                 </a>
             </div>
 
+            <div class="sabao-Natural photo-div-product">
+                <a href="/html/carnes.html">
+                    <!-- <img src="/images/cabaz-photo.jpeg" alt=""> -->
+                    <p>Carnes</p>
+                </a>
+            </div>
+
         </section>
 
         <section class="sugestions-section"></section>
