--- a/html/compotas.html
+++ b/html/compotas.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Simão Alves">
-    <meta name="description" content="Saladas | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
-    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, saladas horta da ria">
+    <meta name="description" content="Compotas | Produtos 100% Naturais - Horta d'Ria - V. N. Famalicão">
+    <meta name="keywords" content="Agricultura, horta, produtos 100% Naturais, cabaz pequeno, cabaz médio, cabaz grande, criar cabaz, cabaz, cabazes, horta d'ria, horta da ria, horta da ria famalicão, compotas horta da ria">
     <link rel="stylesheet" href="/stylesheet/styleAboutUs.css">
     <link rel="stylesheet" href="/stylesheet/cabaz.css">
     <link rel="stylesheet" href="/stylesheet/bottomMenu.css">
@@ -22,7 +22,7 @@
     <script type="module" src="/script.js" defer></script>
 
 
-    <title>Saladas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
+    <title>Compotas - Horta d'Ria - Produtos 100% Naturais - Vila Nova de Famalicão</title>
     <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
