work on sabaoNatural javaScript code add added new features
now sabaoNatural items are selected all in the same div.
changed html structure.

At carrinho added message to clearify that items weight could not be precised.

added to terms and conditions that too.

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -140,7 +140,11 @@
                 </div>
                 <div>
                     <label for="deliver-day">Dia de Entrega<span class="required-input-icon">*</span></label>
-                    <input id="deliver-day" type="date" name="Data Entrega" required>
+                    <select id="deliver-day" type="date" name="Data Entrega" required>
+                        <option value="">Selecionar</option>
+                        <option value="Quinta-feira">5ª feira</option>
+                        <option value="Sexta-feira">6ª feira</option>
+                    </select>
                 </div>
 
                 <div class="schedule-deliver">
