--- a/html/carrinho.html
+++ b/html/carrinho.html
@@ -98,6 +98,9 @@
         Subtotal <span class="final-price"></span>
     </div>
 
+    <p class="priceAlert">O valor final da compra será atualizado de acordo com o peso real dos produtos adquiridos.</p>
+
+
     <section class="totalCartPrice"></section>
         <!-- search bar -->
         <!-- <div class="searchBar-div">
