--- a/html/informations.html
+++ b/html/informations.html
@@ -218,7 +218,18 @@
                 As alterações serão publicadas no nosso site e entrarão em vigor imediatamente após a sua publicação. 
                 Recomendamos que os utilizadores revejam periodicamente os Termos e Condições para se manterem informados sobre eventuais alterações.</p>
 
-            <h5>7. Lei Aplicável</h5>
+            <h5>7. Peso dos Produtos</h5>
+            
+            <p>Informamos que o peso dos produtos pode variar ligeiramente (≈± 200 gramas) devido à natureza dos produtos naturais. Consequentemente, o valor 
+                apresentado no nosso website é um valor estimado e sujeito a confirmação final após a pesagem exata dos artigos.</p> 
+
+            <p>A Horta da Ria de Famalicão reserva-se ao direito de ajustar o valor total da encomenda baseando-se no peso exato dos produtos no momento da preparação. 
+                O peso dos produtos naturais pode variar, e apesar de fazermos todos os esforços para garantir medidas precisas, pequenas variações são inevitáveis. 
+                Assim, o valor final da compra será atualizado de acordo com o peso real dos produtos adquiridos. 
+                Ao confirmar a sua encomenda, o cliente aceita estas condições.</p>   
+
+            <h5>8. Lei Aplicável</h5>
+            
             <p>Estes Termos e Condições são regidos pela legislação portuguesa. 
                 Qualquer litígio decorrente destes Termos e Condições será sujeito à jurisdição exclusiva dos tribunais de Portugal.
             </p>
