--- a/html/orderSentPage.html
+++ b/html/orderSentPage.html
@@ -97,13 +97,14 @@
     </section>
         
     <section class="thankYouOrder">
-
+        <!-- animate__animated animate__backOutRight -->
         <div class="thankYouMessage">
             <span>Enviado com Sucesso!</span><br>
-            <i class="fa-regular fa-paper-plane animate__animated animate__fadeInBottomLeft"></i><br>
+            <i class="fa-solid fa-plane"></i><br>
             <p>Obrigado pela tua encomenda<br>
                 <span class="client-Name"></span>!
             </p>
+            <p>Queremos realçar que o preço total que viste pode variar um pouco, por se tratarem de produtos agrícolas.</p>
             <p>Em breve, entraremos em contacto contigo!</p>
         </div>
         
