fix images errors; added description to eggs html file; added cogumelos portobello image

--- a/html/ovos.html
+++ b/html/ovos.html
@@ -103,6 +103,8 @@
     <!-- watch js document -->
     <section class="ovos">
         <h4 class="section-title">Ovos</h4>
+        <p class="description">As nossas galinhas andam em pasto ao ar livre a comer erva e bichos. </p> 
+        <p class="description">Complementamos a alimentação delas com uma mistura de cereais da biozezere.</p>
     </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
