--- a/html/ovos.html
+++ b/html/ovos.html
@@ -103,8 +103,10 @@
     <!-- watch js document -->
     <section class="ovos">
         <h4 class="section-title">Ovos</h4>
-        <p class="description">As nossas galinhas andam em pasto ao ar livre a comer erva e bichos. </p> 
-        <p class="description">Complementamos a alimentação delas com uma mistura de cereais da biozezere.</p>
+        <div class="description">
+            <p class="description">As nossas galinhas andam em pasto ao ar livre a comer erva e bichos. </p> 
+            <p class="description">Complementamos a alimentação delas com uma mistura de cereais da biozezere.</p>
+        </div>
     </section>
 
     <section class="media-and-contacts" id="contactsAndSocialMedia">
