added 'ver mais...' and scrollLeft on Home Page
added 'ver mais...' buttons on home page text because could be extensive for users,

added scrollLeft on welcomeSection because on small devices that images don't apeears at first time, and now after a few seconds the users could see more images about horta d'Ria

Also change he color of clients names on testimonials sections because the color didn't look good

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
 
     <script type="module" src="/scriptDocs/testimonials.js" defer></script>
+    <script type="module" src="/scriptDocs/aboutUs.js"></script>
 
 
     <title>Horta d'Ria - Home Page - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -189,21 +190,24 @@
                         Exerci essa profissão uns anos, até que comecei a ganhar mais interesse e gosto pela natureza. Esse gosto fez com que eu fosse 
                         capaz de produzir a minha própria comida. O que começou como um hooby, surge em 2020 como a horta d'Ria, um projecto pequeno em 
                         tamanho mas grande em qualidade e vontade em estarmos constantemente a aprender.
+                        <span class="see-more-button-aboutUs-description"><button>ver mais...</button></span> 
+
                     </p>
-                    <p>
-                        Eu sou o Francisco nascido em 89 e natural de Vila Nova de Famalicão. Tirei o curso técnico de informática no 12º ano e já há 
+                    <p class="description-hidden">
+                        Eu sou o Francisco nascido em 89 e natural de Vila Nova de Famalicão. Tirei o curso técnico 
+                        de informática no 12º ano e já há 
                         15 anos que faço reparações numa empresa. O gosto pela agricultura surge em março de 2021 quando começei a ajudar o Tiago aos fins de semana. 
                         Mais tarde, para dedicar mais tempo à horta, passei de full-time para part-time, na empresa onde era técnico de informática. Com essa mudança 
                         consegui atingir o objectivo de produzir a minha propria comida, aumentar o contacto com a natureza e por sua vez um estilo de vida mais saudável.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         O Francisco juntou-se à equipa cerca de um ano depois. Os nossos ideais são sempre trabalhar com a natureza e não contra. Temos práticas sustentáveis, 
                         agroecológicas e regenerativas. Damos ênfase aos produtos locais, sazonais e sistemas circulares. Soberania alimentar na nossa comunidade é o que aspiramos.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         Em 2023 produzimos mais de 3 toneladas de alimentos. 
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         Em 2024 produzimos cabazes semanais para as famílias, trabalhamos com diferentes restaurantes do norte de Portugal e todos os sábados de manhã podes encontrar-nos no mercado municipal de Vila Nova de Famalicão.
                     </p>
                    
@@ -222,18 +226,19 @@
                     <p> A Horta d'Ria é um testemunho da inovação e tradição, onde tecnologias modernas são aproveitadas para melhorar a sustentabilidade
                         sem comprometer o equilíbrio natural do ecossistema. Queremos criar um ambiente auto-sustentável onde o solo é fertil, a biodiversidade 
                         floresce e cada planta e animal são respeitados como parte vital da teia interligada da vida.
+                        <span class="see-more-button-mission"><button>ver mais...</button></span> 
                     </p>
-                    <p> Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão, 
+                    <p class="description-hidden"> Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão, 
                         uma oportunidade para ter um impacto positivo no mundo que nos rodeia. Acreditamos num futuro onde os produtos naturais não sejam apenas uma escolha, 
                         mas um modo de vida, onde a sustentabilidade não seja uma tendência, mas um princípio fundamental que guia cada decisão que tomamos.
                     </p>
-                    <p> Os produtos locais e da época têm uma importância enorme na economia regional e soberania alimentar local.
+                    <p class="description-hidden"> Os produtos locais e da época têm uma importância enorme na economia regional e soberania alimentar local.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         Todos os locais têm características intrínsecas que refletem no tipo e altura do ano que esse alimento está disponivel, a frescura dos alimentos
                         e a disponibilidade de nutrientes desse alimento que diminiu consoante os dias apos a sua colheita vao passando.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         A pegada carbónica que os alimentos têm ao fazerem milhares de quilómetros deveria pesar na consciência de cada um de nós criando assim um respeito maior pela natureza e os seus ciclos. 
                     </p>
                 </div>
@@ -289,22 +294,23 @@
                 </span> 
                 Aqui podes selecionar vários produtos à tua escolha e ainda tens a possibilidade de consultar
                 qual o preço por artigo e por quantidade.
+                <span class="see-more-button-website-explanation"><button>ver mais...</button></span> 
             </p>
-            <p>Uma vez escolhidos os produtos, as respetivas quantidades e devidamente adicionados ao cesto,
+            <p class="description-hidden">Uma vez escolhidos os produtos, as respetivas quantidades e devidamente adicionados ao cesto,
                 chega o momento de responderes a umas breves questões sobre a tua encomenda.
             </p>
-            <p>Se queres entrega ao domicílio, se preferes levantar na nossa Horta ou mesmo na Praça Mercado de V. N. Famalicão
+            <p class="description-hidden">Se queres entrega ao domicílio, se preferes levantar na nossa Horta ou mesmo na Praça Mercado de V. N. Famalicão
                 ao Sábado.
             </p>
-            <p>
+            <p class="description-hidden">
                 Todas as respostas servirão apenas para que te possamos prestar o melhor serviço possível.
                 ATENÇÃO, nenhuma resposta será gravada ou registada em nenhum documento ou base dados. Assim como também 
                 não iremos registar os teus contactos ou morada sem a tua permissão. 
             </p>
-            <p>
+            <p class="description-hidden">
                 Prezámos pela tua privacidade.
             </p>
-            <p>Caso ainda continues com alguma dúvida, por favor, não hesites em contactar-nos.
+            <p class="description-hidden">Caso ainda continues com alguma dúvida, por favor, não hesites em contactar-nos.
                 Estaremos sempre disponíveis para te ajudar, mediante o melhor possível.
             </p>
             
