--- a/html/videos.html
+++ b/html/videos.html
@@ -23,8 +23,6 @@
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script type="module" src="\script.js" defer></script>
-    <script type="text/javascript"src="/scriptDocs/testimonials.js" defer></script>
 
     
 
@@ -32,6 +30,7 @@
     <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
 
 
+    <script type="module" src="/script.js" defer></script>
 
 </head>
 <body>
