--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         
        
 
-        <section class="welcomeSection">
+        <section class="welcomeSection scrollBehaviorSmooth">
 
             <div class="title-div">
                 <h1>Bem Vindo à Horta d'Ria</h1>
@@ -190,7 +190,7 @@
                         Exerci essa profissão uns anos, até que comecei a ganhar mais interesse e gosto pela natureza. Esse gosto fez com que eu fosse 
                         capaz de produzir a minha própria comida. O que começou como um hooby, surge em 2020 como a horta d'Ria, um projecto pequeno em 
                         tamanho mas grande em qualidade e vontade em estarmos constantemente a aprender.
-                        <span class="see-more-button-aboutUs-description"><button>ver mais...</button></span> 
+                        <span class="see-more-button-aboutUs-description spanWithButton"><button>ver mais...</button></span> 
 
                     </p>
                     <p class="description-hidden">
@@ -226,7 +226,7 @@
                     <p> A Horta d'Ria é um testemunho da inovação e tradição, onde tecnologias modernas são aproveitadas para melhorar a sustentabilidade
                         sem comprometer o equilíbrio natural do ecossistema. Queremos criar um ambiente auto-sustentável onde o solo é fertil, a biodiversidade 
                         floresce e cada planta e animal são respeitados como parte vital da teia interligada da vida.
-                        <span class="see-more-button-mission"><button>ver mais...</button></span> 
+                        <span class="see-more-button-mission spanWithButton"><button>ver mais...</button></span> 
                     </p>
                     <p class="description-hidden"> Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão, 
                         uma oportunidade para ter um impacto positivo no mundo que nos rodeia. Acreditamos num futuro onde os produtos naturais não sejam apenas uma escolha, 
@@ -294,7 +294,7 @@
                 </span> 
                 Aqui podes selecionar vários produtos à tua escolha e ainda tens a possibilidade de consultar
                 qual o preço por artigo e por quantidade.
-                <span class="see-more-button-website-explanation"><button>ver mais...</button></span> 
+                <span class="see-more-button-website-explanation spanWithButton"><button>ver mais...</button></span> 
             </p>
             <p class="description-hidden">Uma vez escolhidos os produtos, as respetivas quantidades e devidamente adicionados ao cesto,
                 chega o momento de responderes a umas breves questões sobre a tua encomenda.
