--- a/html/aboutUs.html
+++ b/html/aboutUs.html
@@ -20,9 +20,9 @@
 
     <!-- font awesome  -->
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
-    <script type="module" src="\script.js" defer></script>
     <script type="module" src="/scriptDocs/aboutUs.js" defer></script>
 
+    <script type="module" src="/script.js" defer></script>
     
 
     <title>Sobre nós - Horta d'Ria - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
@@ -56,7 +56,6 @@
                 </div>
 
                 <i class="fa-solid fa-bars-staggered openMenu"></i>
-                <!-- <i class="fa-solid fa-x"></i>  fa-bars-staggered  -->
             </div>
         </nav>
 
@@ -123,21 +122,24 @@
                         Exerci essa profissão uns anos, até que comecei a ganhar mais interesse e gosto pela natureza. Esse gosto fez com que eu fosse 
                         capaz de produzir a minha própria comida. O que começou como um hooby, surge em 2020 como a horta d'Ria, um projecto pequeno em 
                         tamanho mas grande em qualidade e vontade em estarmos constantemente a aprender.
+                        <span class="see-more-button-aboutUs-description spanWithButton"><button>ver mais...</button></span> 
+
                     </p>
-                    <p>
-                        Eu sou o Francisco nascido em 89 e natural de Vila Nova de Famalicão. Tirei o curso técnico de informática no 12º ano e já há 
+                    <p class="description-hidden">
+                        Eu sou o Francisco nascido em 89 e natural de Vila Nova de Famalicão. Tirei o curso técnico 
+                        de informática no 12º ano e já há 
                         15 anos que faço reparações numa empresa. O gosto pela agricultura surge em março de 2021 quando começei a ajudar o Tiago aos fins de semana. 
                         Mais tarde, para dedicar mais tempo à horta, passei de full-time para part-time, na empresa onde era técnico de informática. Com essa mudança 
                         consegui atingir o objectivo de produzir a minha propria comida, aumentar o contacto com a natureza e por sua vez um estilo de vida mais saudável.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         O Francisco juntou-se à equipa cerca de um ano depois. Os nossos ideais são sempre trabalhar com a natureza e não contra. Temos práticas sustentáveis, 
                         agroecológicas e regenerativas. Damos ênfase aos produtos locais, sazonais e sistemas circulares. Soberania alimentar na nossa comunidade é o que aspiramos.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         Em 2023 produzimos mais de 3 toneladas de alimentos. 
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         Em 2024 produzimos cabazes semanais para as famílias, trabalhamos com diferentes restaurantes do norte de Portugal e todos os sábados de manhã podes encontrar-nos no mercado municipal de Vila Nova de Famalicão.
                     </p>
                    
@@ -156,18 +158,19 @@
                     <p> A Horta d'Ria é um testemunho da inovação e tradição, onde tecnologias modernas são aproveitadas para melhorar a sustentabilidade
                         sem comprometer o equilíbrio natural do ecossistema. Queremos criar um ambiente auto-sustentável onde o solo é fertil, a biodiversidade 
                         floresce e cada planta e animal são respeitados como parte vital da teia interligada da vida.
+                        <span class="see-more-button-mission spanWithButton"><button>ver mais...</button></span> 
                     </p>
-                    <p> Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão, 
+                    <p class="description-hidden"> Com uma paixão partilhada pelo cuidado do ambiente e um profundo respeito pela Terra, enquanto jovens agricultores vemos o nosso futuro como uma missão, 
                         uma oportunidade para ter um impacto positivo no mundo que nos rodeia. Acreditamos num futuro onde os produtos naturais não sejam apenas uma escolha, 
                         mas um modo de vida, onde a sustentabilidade não seja uma tendência, mas um princípio fundamental que guia cada decisão que tomamos.
                     </p>
-                    <p> Os produtos locais e da época têm uma importância enorme na economia regional e soberania alimentar local.
+                    <p class="description-hidden"> Os produtos locais e da época têm uma importância enorme na economia regional e soberania alimentar local.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         Todos os locais têm características intrínsecas que refletem no tipo e altura do ano que esse alimento está disponivel, a frescura dos alimentos
                         e a disponibilidade de nutrientes desse alimento que diminiu consoante os dias apos a sua colheita vao passando.
                     </p>
-                    <p>
+                    <p class="description-hidden">
                         A pegada carbónica que os alimentos têm ao fazerem milhares de quilómetros deveria pesar na consciência de cada um de nós criando assim um respeito maior pela natureza e os seus ciclos. 
                     </p>
                 </div>
