added new image to about us file

--- a/index.html
+++ b/index.html
@@ -212,6 +212,10 @@
                     </p>
                    
                 </div>
+
+                <div class="about-us-photo">
+                    <img src="/images/working.jpg" alt="owners working in the field">   
+                </div>
                     
                 <div class="about-us-description description-two">
                     <h3>A nossa missão e visão</h3>
