--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <ul class="menu-list">
                 <!-- href.value = element.id.value -->
             <a href="/html/aboutUs.html"> <li>Quem Somos</li>  </a>
-            <a href="/index.html#cabazesMenu"> <li>Cabazes</li></a>
+            <a href="/index.html#cabazesMenu" class="cabazesMenu"> <li>Cabazes</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="/html/informations.html"> <li>Informações</li></a>
