--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
     <title>Horta d'Ria - Home Page - Produtos 100% Naturais - Agricultura Local e Ecológica - V. N. Famalicão</title>
     <link rel="icon" type="image/jpg" href="/images/logo-circle.jpg">
-    <script type="module" src="/script.js" defer></script>
+    <script type="module" src="script.js" defer></script>
 
 
 </head>
@@ -65,7 +65,7 @@
         <ul class="menu-list">
                 <!-- href.value = element.id.value -->
             <a href="/html/aboutUs.html"> <li>Quem Somos</li>  </a>
-            <a href="/index.html#cabazesMenu" class="cabazesMenu"> <li>Cabazes</li></a>
+            <a href="/index.html#cabazesMenu" id="cabazesButton"><li>Cabazes</li></a>
             <a href="/html/produtos.html"> <li>Produtos</li></a>
             <a href="/html/form.html"> <li>Contactos</li></a>
             <a href="/html/informations.html"> <li>Informações</li></a>
