--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 
 
-
     <script src="https://kit.fontawesome.com/ff1abd11bd.js" crossorigin="anonymous"></script> 
 
     <script type="module" src="/scriptDocs/testimonials.js" defer></script>
@@ -126,7 +125,7 @@
             </div>
 
             <div class="title-div">
-                <h1>Cabazes semanais</h1>
+                <h1>Cabazes <br> semanais</h1>
             </div>
     
         </section>
