--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
        
         <div class="come-see-us">
             <h3>Encomendas</h3>
-            <p> Só aceitamos encomendas de a 2ª a 4ª feira.
+            <p> Só aceitamos encomendas de 2ª a 4ª feira.
                 Pelo que tens até às 23:59h de cada 4ª feira para a fazer.
                 Caso não consigas fazer a tua encomenda dentro desse tempo, por favor, 
                 entra em contacto connosco.   
