--- a/html/informations.html
+++ b/html/informations.html
@@ -149,9 +149,7 @@
             <p>Uma vez escolhidos os produtos, as respetivas quantidades e devidamente adicionados ao cesto,
                 chega o momento de responderes a umas breves questões sobre a tua encomenda.
             </p>
-            <p>Se queres entrega ao domicílio, se preferes levantar na nossa Horta ou mesmo na Praça Mercado de V. N. Famalicão
-                ao Sábado.
-            </p>
+            <p>Se queres entrega ao domicílio ou se preferes levantar na nossa Horta.</p>
             <p>
                 Todas as respostas servirão apenas para que te possamos prestar o melhor serviço possível.
                 ATENÇÃO, nenhuma resposta será gravada ou registada em nenhum documento ou base dados. Assim como também 
