--- a/index.html
+++ b/index.html
@@ -302,9 +302,7 @@
             <p class="description-hidden">Uma vez escolhidos os produtos, as respetivas quantidades e devidamente adicionados ao cesto,
                 chega o momento de responderes a umas breves questões sobre a tua encomenda.
             </p>
-            <p class="description-hidden">Se queres entrega ao domicílio, se preferes levantar na nossa Horta ou mesmo na Praça Mercado de V. N. Famalicão
-                ao Sábado.
-            </p>
+            <p class="description-hidden">Se queres entrega ao domicílio ou se preferes levantar na nossa Horta</p>
             <p class="description-hidden">
                 Todas as respostas servirão apenas para que te possamos prestar o melhor serviço possível.
                 ATENÇÃO, nenhuma resposta será gravada ou registada em nenhum documento ou base dados. Assim como também 
