REMOVED type="date" from select id="deliver-day"

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -140,7 +140,7 @@
                 </div>
                 <div>
                     <label for="deliver-day">Dia de Entrega<span class="required-input-icon">*</span></label>
-                    <select id="deliver-day" type="date" name="Data Entrega" required>
+                    <select id="deliver-day" name="Data Entrega" required>
                         <option value="">Selecionar</option>
                         <option value="Quinta-feira">5ª feira</option>
                         <option value="Sexta-feira">6ª feira</option>
@@ -198,7 +198,7 @@
                 <!-- <input type="hidden" name="Levantamento na Horta"> -->
                 <div>
                     <label for="pick-up-day">Dia de Levantamento</label>
-                    <select id="pick-up-day" type="date" name="Quero Levantar neste dia" required>
+                    <select id="pick-up-day" name="Quero Levantar neste dia" required>
                         <option value="">Selecionar</option>
                         <option value="Quinta-feira">5ª feira</option>
                         <option value="Sexta-feira">6ª feira</option>
