changed select element date
removed spaces on name and added "disabled selected" atributes to the element

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -140,8 +140,8 @@
                 </div>
                 <div>
                     <label for="deliver-day">Dia de Entrega<span class="required-input-icon">*</span></label>
-                    <select id="deliver-day" name="Data Entrega" required>
-                        <option value="">Selecionar</option>
+                    <select id="deliver-day" name="Data-Entrega" required>
+                        <option value="" disabled selected>Selecionar</option>
                         <option value="Quinta-feira">5ª feira</option>
                         <option value="Sexta-feira">6ª feira</option>
                     </select>
@@ -198,8 +198,8 @@
                 <!-- <input type="hidden" name="Levantamento na Horta"> -->
                 <div>
                     <label for="pick-up-day">Dia de Levantamento</label>
-                    <select id="pick-up-day" name="Quero Levantar neste dia" required>
-                        <option value="">Selecionar</option>
+                    <select id="pick-up-day" name="Data-Levantamento" required>
+                        <option value="" disabled selected>Selecionar</option>
                         <option value="Quinta-feira">5ª feira</option>
                         <option value="Sexta-feira">6ª feira</option>
                     </select>
