added "*" symbol for user knows that input is required

--- a/html/advancePageOne.html
+++ b/html/advancePageOne.html
@@ -140,7 +140,6 @@
                 </div>
                 <div>
                     <label for="deliver-day">Dia de Entrega<span class="required-input-icon">*</span></label>
-
                     <select id="deliver-day" name="Data-Entrega" required>
                         <option value="" disabled selected>Selecionar</option>
                         <option value="Quinta-feira">5ª feira</option>
@@ -198,7 +197,7 @@
             <section class="horta-pick-up-sec border-1">
                 <!-- <input type="hidden" name="Levantamento na Horta"> -->
                 <div>
-                    <label for="pick-up-day">Dia de Levantamento</label>
+                    <label for="pick-up-day">Dia de Levantamento<span class="required-input-icon">*</span></label>
                     <select id="pick-up-day" name="Data-Levantamento" required>
                         <option value="" disabled selected>Selecionar</option>
                         <option value="Quinta-feira">5ª feira</option>
@@ -206,7 +205,7 @@
                     </select>
                 </div>
                 <div class="schedule-deliver">
-                    <label for="ppick-up-schedule">Horário</label>
+                    <label for="ppick-up-schedule">Horário<span class="required-input-icon">*</span></label>
                     <select id="ppick-up-schedule" name="Horario" required>
                         <optgroup label="Manhã">
                             <option value="">Selecionar</option>
